--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,44 @@
             <version>2.19</version>
         </plugin>
 	<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+         <version>2.4.2</version>
+         <configuration>
+           <tagNameFormat>v@{project.version}</tagNameFormat>
+           <autoVersionSubmodules>true</autoVersionSubmodules>
+           <releaseProfiles>releases</releaseProfiles>
+         </configuration>
+       </plugin>
+       <profiles>
+   <profile>
+      <id>releases</id>
+      <build>
+         <plugins>
+            <plugin>
+               <groupId>org.sonatype.plugins</groupId>
+               <artifactId>nexus-staging-maven-plugin</artifactId>
+               <version>1.5.1</version>
+               <executions>
+                  <execution>
+                     <id>default-deploy</id>
+                     <phase>deploy</phase>
+                     <goals>
+                        <goal>deploy</goal>
+                     </goals>
+                  </execution>
+               </executions>
+               <configuration>
+                  <serverId>nexus</serverId>
+                  <nexusUrl>http://13.126.120.8:8081/repository/my-web/</nexusUrl>
+                  <skipStaging>true</skipStaging>
+               </configuration>
+            </plugin>
+         </plugins>
+      </build>
+   </profile>
+</profiles>
+	<plugin>
       <groupId>org.jacoco</groupId>
       <artifactId>jacoco-maven-plugin</artifactId>
       <version>0.7.8</version>
