--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,9 @@
             <version>2.19</version>
         </plugin>
 	<plugin>
-          <groupId>org.apache.maven.plugins</groupId>
+           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-         <version>2.4.2</version>
+          <version>3.0.0-M2</version>
          <configuration>
            <tagNameFormat>v@{project.version}</tagNameFormat>
            <autoVersionSubmodules>true</autoVersionSubmodules>
