--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,8 @@
         </plugin>
 	<plugin>
            <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>3.0.0-M2</version>
+           <artifactId>maven-release-plugin</artifactId>
+           <version>2.4.2</version>
          <configuration>
            <tagNameFormat>v@{project.version}</tagNameFormat>
            <autoVersionSubmodules>true</autoVersionSubmodules>
