--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.javahome</groupId>
 	<artifactId>myweb</artifactId>
 	<packaging>war</packaging>
-	<version>5.0.0-SNAPSHOT</version>
+	<version>5.2.1-SNAPSHOT</version>
 	<name>my-app</name>
 	<url>http://maven.apache.org</url>
 	<scm>
         <connection>scm:git:https://github.com/rsam-s/my-app.git</connection>
         <url>https://github.com/rsam-s/my-app.git</url>
         <developerConnection>scm:git:https://github.com/rsam-s/my-app.git</developerConnection>
-        </scm>
+          <tag>HEAD</tag>
+  </scm>
 
 	<dependencies>
 		<dependency>
