--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,13 @@
 	</dependencies>
 	<distributionManagement>
 		 <snapshotRepository>
-		    <id>nexus3</id>
-		    <url>http://13.233.16.150:8081/repository/maven-snapshots/</url>
+		    <id>nexus</id>
+		    <url>http://13.235.75.31:8081/repository/maven-snapshots/</url>
 		 </snapshotRepository>
 		
 		<repository>
-		    <id>nexus3</id>
-		    <url>http://13.233.16.150:8081/repository/myweb/</url>
+		    <id>nexus</id>
+		    <url>http://13.235.75.31:8081/repository/maven-releases/</url>
 		</repository>
   	</distributionManagement>
 	
@@ -114,8 +114,8 @@
                   </execution>
                </executions>
                <configuration>
-                  <serverId>nexus3</serverId>
-                  <nexusUrl>http://13.233.16.150:8081/repository/myweb/</nexusUrl>
+                  <serverId>nexus</serverId>
+                  <nexusUrl>http://13.235.75.31:8081/repository/maven-releases/</nexusUrl>
                   <skipStaging>true</skipStaging>
                </configuration>
             </plugin>
